--- a/package.json
+++ b/package.json
@@ -104,10 +104,11 @@
     "@reactioncommerce/file-collections-sa-gridfs": "^0.1.5",
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/random": "^1.0.2",
+    "@snyk/protect": "latest",
     "graphql": "~14.7.0",
     "semver": "~6.3.0",
     "sharp": "^0.28.3",
-    "@snyk/protect": "latest"
+    "@twowheelstogo/api-plugin-catalog-menu": "github:twowheelstogo/api-plugin-catalog-menu#trunk"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -135,7 +136,7 @@
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-react": "~7.14.3",
     "eslint-plugin-react-hooks": "~2.0.1",
-    "faker": "~4.1.0",
+    "faker": "~5.5.3",
     "graphql-schema-linter": "~0.2.5",
     "graphql-tools": "~4.0.5",
     "husky": "^5.0.8",
