--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "@twowheelstogo/api-plugin-modifier-groups": "github:twowheelstogo/api-plugin-modifier-groups#trunk",
     "graphql": "~14.7.0",
     "semver": "~6.3.0",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "api-plugin-pickup-extension": "github:twowheelstogo/api-plugin-pickup-extension#development"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
