feat: update some plugins

--- a/package.json
+++ b/package.json
@@ -80,14 +80,14 @@
     "@reactioncommerce/api-plugin-job-queue": "^1.0.2",
     "@reactioncommerce/api-plugin-navigation": "^1.1.1",
     "@reactioncommerce/api-plugin-notifications": "^1.1.0",
-    "@reactioncommerce/api-plugin-orders": "github:twowheelstogo/api-plugin-orders#tmp_trunk",
+    "@reactioncommerce/api-plugin-orders": "github:twowheelstogo/api-plugin-orders-barista#master",
     "@reactioncommerce/api-plugin-payments": "github:twowheelstogo/api-plugin-payments#trunk",
     "@reactioncommerce/api-plugin-payments-example": "^1.1.1",
     "@reactioncommerce/api-plugin-payments-stripe-sca": "^1.0.2",
     "@reactioncommerce/api-plugin-pricing-simple": "^1.0.3",
     "@reactioncommerce/api-plugin-products": "^1.0.2",
     "@reactioncommerce/api-plugin-settings": "^1.0.2",
-    "@reactioncommerce/api-plugin-shipments": "^1.0.1",
+    "@reactioncommerce/api-plugin-shipments": "github:twowheelstogo/api-plugin-shipments#development",
     "@reactioncommerce/api-plugin-shipments-flat-rate": "^1.0.4",
     "@reactioncommerce/api-plugin-shops": "^1.2.1",
     "@reactioncommerce/api-plugin-simple-schema": "^1.0.1",
@@ -109,7 +109,8 @@
     "graphql": "~14.7.0",
     "semver": "~6.3.0",
     "sharp": "^0.28.3",
-    "api-plugin-pickup-extension": "github:twowheelstogo/api-plugin-pickup-extension#development"
+    "api-plugin-pickup-extension": "github:twowheelstogo/api-plugin-pickup-extension#development",
+    "api-plugin-payments-epay": "github:twowheelstogo/api-plugin-epay-tavola#master"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
